# WSMaker_forHc

./: 2mu_newbug.root  CMakeLists.txt  Changelog.md  Doxyfile  FitCrossCheckForLimits.C  HowTo.md  LikelihoodLandscape.C  README.md  asimov_newbug.root  compile_macro.sh  data_newbug.root  muHatModes.C  newGetMuHat.C  plot.c  runAsymptoticsCLs.C  runSig.C  setup.sh  setup_new.sh  submit.sh
WSMaker/: RooExpandedFitResult.h  TMsgLogger.h  analysis.hpp  analysis_impl.hpp  analysishandler.hpp  binning.hpp  category.hpp  categoryhandler.hpp  configuration.hpp  containerhelpers.hpp  engine.hpp  finder.hpp  inputshandler.hpp  inputshandler_paper.hpp  inputshandler_run2.hpp  outputhandler.hpp  plotUtils.hpp  plotting.hpp  postprocessing.hpp  properties.hpp  regionnamesparser.hpp  regionnamesparser_run2.hpp  roofitUtils.hpp  sample.hpp  samplehandler.hpp  sampleincategory.hpp  samplesbuilder.hpp  splitter.hpp  splitter_Run2.hpp  systematic.hpp  systematichandler.hpp  systematiclistsbuilder.hpp  utility.hpp
macros/: AtlasLabels.C  AtlasStyle.C  AtlasUtils.C  ReplaceConstrain.C  RooMsgHandler.C  drawFCCToys.cpp  drawNLLscan.cpp  drawPlot.C  drawPlot_pulls.C  drawPlot_pulls_C.d  drawPlot_pulls_C_ACLiC_dict_rdict.pcm  drawPlot_pulls_pretty.C  fileHolder.C  findSigma.C  interpolateinputs.C  log.C  makeAsimovData.C  minimize.C  morphingProjection.C  parseString.C  readEVsFromFCC.cpp  runBreakdown.C  runPulls.C  saveAscii.C  smearinputs.C  smoothinputs.C
plot_2mu_newbug/: contours.C
scripts/: AnalysisMgr.py  AtlasRounding.py  BatchMgr.py  BreakdownParser.py  BreakdownTxtToTex.py  CompareShape.py  FCCParser.py  GetCompatibility.py  InputsCheck.py  NicePlot.py  STXSPlotter.py  analysisBatchConfig.py  analysisPlottingConfig.py  batchConfig.py  change_title_in_inputs.py  colors.py  combineBreakdown.py  compareLikelihoodLandscapes.py  comparePulls.py  correlationAnalysis.py  doActions.py  doFitWithFixedNP.py  doPlotFromWS.py  format_replica_results.sh  getConfidenceInterval.py  getLimit.py  getResults.py  getSig.py  make1DLimitsSummaryPlot.py  make1DLimitsSummaryTable.py  makeNPrankPlots.py  makePullPlots.py  makeRankingPlot.py  makeRatioTables.py  makeReducedDiagPlots.py  makeTables.py  (+21 more)
(+946 files in other folders)
